{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Gameplay",
            "id": "cc3decfa-3b14-4fb7-82c4-9bd5a05404f0",
            "actions": [
                {
                    "name": "MouseLeftClick",
                    "type": "Button",
                    "id": "b45b42f0-675f-47e0-bf02-f0a34fbe1938",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseRightClick",
                    "type": "Button",
                    "id": "02387bfc-7840-4b33-b8f2-b1a30eb431c5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "9d35bff6-9b79-49f3-9b7c-1d95400fdb2b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "795607bb-9b23-490c-b374-3ae21820e4bf",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ae853ecc-1ada-49a7-9b78-4a7d74ebac26",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseRightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5506a632-7f61-44d2-a44a-c98a702f56e2",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}